Add logging to log to a file
STDOUT is used to communicate with the browser thus we need to log to a file
see electron-log readme for details

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/user-event": "^12.1.10",
     "chrome-native-messaging": "^0.2.0",
     "electron": "^11.1.1",
+    "electron-log": "^4.3.1",
     "electron-store": "^6.0.1",
     "install": "^0.13.0",
     "ln-service": "^50.9.5",
